# yzfuture

./: README.md
android/: readme.txt  yzwlnfcreadcard.aar  安卓用户接口文档.docx
android/demo/: build.gradle  gradle.properties  local.properties  使用方法.txt
android/demo(androidx)/: local.properties  settings.gradle
android/demo(androidx)/app/: build.gradle
android/demo/app/: CMakeLists.txt  build.gradle
linux/: CardInfo.ini
linux/demo/: Config.ini  Makefile  Type.h  readCardDemo  readCardDemo.cpp  readCardInfoInterface.h  readme.txt
linux/demo源码/: CMakeLists.txt  Type.h  readCardDemo.cpp  readCardInfoInterface.h  使用方法.txt
linux/demo源码/release/: CMakeLists.txt
linux/demo源码/release/arm64_linux/: CMakeLists.txt
linux/javaDemo/: pom.xml  使用方法.txt
linux/javaDemo/src/: ReadCardDemo.java  ReadCardInfoLib.java  TwoCardByteArray.java  mycallBack.java
linux/pythonDemo/: Demo.py
linux/qtDemo/: mainwindow.cpp  mainwindow.h  mainwindow.ui  test.pro  使用方法.txt
linux/sdk/: readme.txt  支持平台.txt
linux/sdk/demo/: 使用方法.txt
linux/sdk/include/: Type.h  readCardInfoInterface.h
linux/sdk/多浏览器插件/: websocketclient_web.html  使用方法.txt
windows/: readme.txt  windows用户接口文档.docx  使用说明.txt
windows/demo/C#Demo/: Test.sln  使用方法.txt
windows/demo/C#工程Demo/: Test.sln  使用方法.txt
windows/demo/C++Demo/: 使用方法.txt
windows/demo/delphiDemo/: NFCDemo.dpr  NFCDemo.dproj  NFCDemo.dproj.local  NFCDemo.identcache  duGlob.pas  duNFCReader.pas  duType.pas  fmMain.dfm  fmMain.pas  fmReadCard.dfm  fmReadCard.pas  fuIDInfoChild.dfm  fuIDInfoChild.pas  使用方法.txt
windows/demo/javaDemo/: pom.xml  使用方法.txt
windows/demo/vbDemo/: Form4.frm  使用方法.txt  工程1.vbp  工程1.vbw
windows/demo/vb工程Demo/: Form4.frm  使用方法.txt
windows/exe/: CardInfo.ini  Config.ini  UpDateClient.ini  update.txt  使用方法.txt
windows/include/: ReadCardInfoInterface.h  Type.h
windows/lib/: readCardInfo.lib
windows/sdk/dll/: Config.ini  yzwlConfig.ini
windows/sdk/include/: ReadCardInfoInterface.h  Type.h
windows/sdk/lib/: readCardInfo.lib
windows/sdk/lib_x64/: readCardInfo.lib
windows/websocketclient_demo/: index.html  index.js
windows/websocketclient_demo/css/: common.css  (+2 more)
windows/websocket支持/: websocketclient.html  yzwlRCServerSo.lib  创建读卡服务.bat  读卡服务停止.bat  集成及使用方法.doc
windows/多浏览器支持/: websocketclient.html  yzwlConfig.ini  yzwlRCServerInterface.h  yzwlRCServerSo.lib  创建读卡服务.bat  读卡服务停止.bat
(+149 files in other folders)
